--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,3 +1,6 @@
 {
-  "build": { "dockerfile": "Dockerfile" }
+  "image": "docker.io/python:latest",
+  "extensions": ["ms-python.python"],
+  "features": { "ghcr.io/devcontainers/features/github-cli:1": {} },
+  "settings": { "workbench.colorTheme": "Solarized Light" }
 }
